# rapida

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.old  Makefile  README.md  cbsurge.sh  cell_hook.py  create_user.sh  deploy.md  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  jupyterhub_config.py  pyproject.toml  rapida.json  requirements.txt
.azure/: .env.example  README.md  aci-deploy.sh  aci-deploy.yaml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml
afolder/: rapida.json
ap/: rapida.json
bardzo/: rapida.json
cbsurge/: assess.py  azure.py  cli.py  component_base.py  constants.py  core.py  dataset2pmtiles.py  fetch_data.py  initialize.py  isobbox.py  project.py  publish.py  session.py  test-display.ipynb  util.py
cbsurge/admin/: __init__.py  gui.py  ocha.py  osm.py  overture.py  util.py
cbsurge/az/: auth.py  authwidget.py  blobstorage.py  cell_hook.py  fileshare.py  surgeauth.py
cbsurge/azure/: blob_storage.py  fileshare.py  storage.py
cbsurge/azure/tests/: test_azure.py
cbsurge/cli/: __init__.py  admin.py  assess.py  auth.py  create.py  delete.py  download.py  init.py  list.py  publish.py  upload.py
cbsurge/components/: component_base.py  population.py
cbsurge/components/buildings/: __init__.py  fgb.py  fgbgdal.py  preprocessing.py  variables.py
cbsurge/components/builtenv/: __init__.py
cbsurge/components/builtenv/buildings/: __init__.py  fgb.py  pmt.py  variables.py
cbsurge/components/builtenv/electricity/: __init__.py  variables.py
cbsurge/components/builtup/: __init__.py  variables.py
cbsurge/components/depriv/: __init__.py  variables.py
cbsurge/components/deprivation/: __init__.py  variables.py
cbsurge/components/electricity/: __init__.py  variables.py
cbsurge/components/elegrid/: __init__.py
cbsurge/components/gdp/: __init__.py  variables.py
cbsurge/components/landuse/: __init__.py  prediction.py  stac.py  variables.py
cbsurge/components/naturalenvironment/: __init__.py  variables.py
cbsurge/components/population/: __init__.py  component.py  pop_coefficient.py  variables.py  worldpop.py
cbsurge/components/roads/: __init__.py  variables.py
cbsurge/components/rwi/: __init__.py
cbsurge/components/socecenv/rwi/: __init__.py  variables.py
cbsurge/core/: component.py  dump_variables.py  variable.py
cbsurge/example/: upload.py
cbsurge/exposure/buildings/: fgb.py  pmt.py  pmtiles.py
cbsurge/exposure/builtenv/: __init__.py
cbsurge/exposure/builtenv/buildings/: __init__.py  afgb.py  fgb.py  fgbgdal.py  pmt.py  preprocessing.py
cbsurge/exposure/population/: __init__.py  cli.py  constants.py  download.py  download_worldpop.py  old_download.py  variables.json  variables.py  worldpop.py
cbsurge/project/: __init__.py  project.py
cbsurge/stats/: GDALRasterSource.py  OGRDataSource.py  ZonalStats.py  __init__.py  ogr_data_source.py  vector_zonal_stats.py  zonal_stats.py  zst.py
cbsurge/stats/tests/: test_ZonalStats.py
cbsurge/util/: __init__.py  custom_stream_handler.py  dataset2pmtiles.py  display_geodata.py  download_geodata.py  downloader.py  fetch_drivers.py  fiona_chunks.py  fq_function_name_formatter.py  gen_blocks.py  gen_blocks_bbox.py  geo.py  get_geographic_bbox.py  gpd_overlay.py  http_get_json.py  http_post_json.py  proj_are_equal.py  read_bbox.py  resolve_url.py  setup_logger.py  silence_httpx_az.py  validate.py  validate_azure_storage_path.py  validate_path.py  worker.py
cbsurge/y/population/active_total/: MDA_active_total.tif
cbsurge/y/population/child_total/: MDA_child_total.tif
cbsurge/y/population/elderly_total/: MDA_elderly_total.tif
cbsurge/y/population/female_active/: MDA_female_active.tif
cbsurge/y/population/female_child/: MDA_female_child.tif
cbsurge/y/population/female_elderly/: MDA_female_elderly.tif
cbsurge/y/population/female_total/: MDA_female_total.tif
cbsurge/y/population/male_active/: MDA_male_active.tif
deploy/: pixi.toml
electricity/: rapida.json
rapida/: isobbox.py  session.py
rapida/admin/: cgaz.py  ocha.py  osm.py  util.py
rapida/az/: blobstorage.py  fileshare.py  surgeauth.py
rapida/cli/: __init__.py  aclick.py  admin.py  assess.py  auth.py  connectivity.py  create.py  delete.py  download.py  h3id.py  init.py  list.py  ntl.py  population.py  publish.py  run.py  upload.py
rapida/components/buildings/: __init__.py  fgb.py  fgbgdal.py  pmt.py  preprocessing.py  variables.py
rapida/components/deprivation/: __init__.py
rapida/components/elegrid/: __init__.py  variables.py
rapida/components/gdp/: __init__.py  variables.py
rapida/components/landuse/: __init__.py  cloud.py  codes.py  constants.py  download.py  prediction.py  sentinel_item.py  stac.py  stac_collection.py  tiles.py  utils.py  variables.py
rapida/components/ntl/: __init__.py  variables.py
rapida/components/population/: __init__.py  constants.py  pop_coefficient.py  variables.py  worldpop.py  wpopstac.py
rapida/components/roads/: __init__.py  variables.py
rapida/components/rwi/: __init__.py  variables.py
rapida/connectivity/: __init__.py  graph.py  io.py  isochrone.py  runcli.py
rapida/core/: component.py  variable.py
rapida/ntl/: cache.py  fetch.py  outage.py  util.py  utils.py  vis.py
rapida/ntl/nasa/: const.py  io.py  outage.py  search.py  util.py
rapida/ntl/noaa/: cmask.py  const.py  io.py  search.py
rapida/ntl/science/: search.py
rapida/project/: project.py
rapida/stats/: raster_zonal_stats.py  vector_zonal_stats.py
rapida/util/: add_h3id.py  bbox_param_type.py  chunker.py  countries.py  dataset2pmtiles.py  download_geodata.py  download_remote_file.py  downloader.py  fiona_chunks.py  gen_blocks.py  generator_length.py  geo.py  get_geographic_bbox.py  get_parent.py  gpd_overlay.py  http_get_json.py  proj_are_equal.py  read_bbox.py  resolve_url.py  setup_logger.py  silence_httpx_az.py  worker.py
tests/: t.py
tests/cbsurge/: test_cli.py  test_session.py
tests/cbsurge/stats/: test_ZonalStats.py  test_zonal_stats.py
tests/rapida/: test_cli.py  test_session.py
(+17 files in other folders)
