[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rapida"
dynamic = ["version"]
description = "python tools that facilitate the assessment of natural hazards over various domains like population, landuse, infrastructure, etc"
requires-python = ">=3.12"
authors = [
    { name = 'Ioan Ferencik'},
    { name = 'Joseph Thuha'},
    { name = 'Jin Igarashi'},
    { name = "United Nations Development Programme", email = "data@undp.org" }
]
readme = "README.md"

# 1. PURE PYTHON DEPENDENCIES (Managed by internal uv via PyPI)
dependencies = [
    "httpx",
    "osm2geojson",
    "h3",
    "tqdm",
    "azure-storage-blob",
    "overturemaps",
    "uvloop",
    "aiofiles",
    "aiohttp",
    "requests",
    "azure-storage-file-share",
    "asyncclick",
    "pycountry",
    "click",
    "azure-core",
    "azure-identity",
    "rich",
    "sympy",
    "pydantic",
    "pmtiles",
    "msal",
    "playwright",
    "pystac_client",
    "requests-oauthlib",
    "python-dateutil",
    "tensorflow-cpu==2.16.2; platform_machine == 'x86_64'",
    "tensorflow==2.16.2; platform_machine == 'aarch64'",
    "psutil",
    "s2cloudless",
    "country-converter",
    "ratelimit",
    "obstore>=0.9.5",
    "pyorbital>=1.12.1",
    "fsspec>=2026.4.0",
    "spacetrack>=1.4.0",
    "reverse-geocoder>=1.5.1",
    "pyvalhalla>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
rapida = "rapida.cli:cli"

[project.urls]
Homepage = "https://github.com/UNDP-Data/rapida"
Documentation = "https://github.com/UNDP-Data/rapida"
Repository = "https://github.com:UNDP-Data/rapida.git"
Issues = "https://github.com/UNDP-Data/rapida/issues"

[tool.setuptools.packages.find]
include = ["rapida*"]

[tool.setuptools_scm]

# --- 2. PIXI WORKSPACE CONFIGURATION (Manages Binary C-Deps) ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies]
# Python interpreter version pin
python = "3.12.*"
numpy = "<= 2"
# Heavy binary geospatial drivers and libraries pulled directly from conda-forge
gdal = ">=3.12.0"
fiona = "*"
rasterio = "*"
geopandas = "*"
shapely = "*"
exactextract = "*"
rio-cogeo = "*"
pyarrow = "*"
h5py = ">=3.16.0"
satpy = ">=0.59.0"
matplotlib = ">=3.10.9"
netcdf4 = ">=1.7.3"
h5netcdf = ">=1.8.1"


[tool.pixi.pypi-dependencies]
# Tells Pixi to install your local package in editable mode via uv
rapida = { path = ".", editable = true }