[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rapida"
dynamic = ["version"]
description = "python tools that facilitate the assessment of natural hazards over various domains like population, landuse, infrastructure, etc"
requires-python = ">=3.12"
authors = [
    { name = 'Ioan Ferencik'},
    { name = 'Joseph Thuha'},
    { name = 'Jin Igarashi'},
    { name = "United Nations Development Programme", email = "data@undp.org" }
]
readme = "README.md"
dependencies = [
    "httpx",
    "osm2geojson",
    "shapely",
    "h3",
    "tqdm",
    "azure-storage-blob",
    "overturemaps",
    "uvloop",
    "aiofiles",
    "aiohttp",
    "requests",
    "azure-storage-file-share",
    "asyncclick",
    "rio-cogeo",
    "exactextract",
    "pycountry",
    "click",
    "pyarrow",
    "azure-core",
    "rasterio",
    "geopandas",
    "azure-identity",
    "rich",
    "sympy",
    "pydantic",
    "pmtiles",
    "msal",
    "playwright",
    "pystac_client",
    "requests-oauthlib",
    "python-dateutil",
    "fiona",
    "nest_asyncio",
    "tensorflow-cpu==2.16.2; platform_machine == 'x86_64'",
    "tensorflow==2.16.2; platform_machine == 'aarch64'",
    "psutil",
    "s2cloudless",
    "country-converter",
    "ratelimit",
    "obstore>=0.9.5",
    "pyorbital>=1.12.1",
    "h5py>=3.16.0",
    "fsspec>=2026.4.0",
    "satpy>=0.59.0",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.3",
    "h5netcdf>=1.8.1",
    "spacetrack>=1.4.0",
    "pyvalhalla>=3.7.0",
    "reverse-geocoder>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
rapida = "rapida.cli:cli"

[project.urls]
Homepage = "https://github.com/UNDP-Data/rapida"
Documentation = "https://github.com/UNDP-Data/rapida"
Repository = "https://github.com/UNDP-Data/rapida.git"
Issues = "https://github.com/UNDP-Data/rapida/issues"

[tool.setuptools.packages.find]
include = ["rapida*"]

[tool.setuptools_scm]
# Left empty to use default Git tag versioning

# ==========================================
# PIXI CONFIGURATION FOR CONDA DEPENDENCIES
# ==========================================
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.dependencies]
# Pixi will pull these heavy binaries from conda-forge instead of PyPI
python = ">=3.12"
numpy = "<2"
gdal = ">=3.12.0"
fiona = "*"
rasterio = "*"
geopandas = "*"
shapely = "*"
exactextract = "*"
rio-cogeo = "*"
pyarrow = "*"
h5py = ">=3.16.0"
satpy = ">=0.59.0"
matplotlib = ">=3.10.9"
netcdf4 = ">=1.7.3"
h5netcdf = ">=1.8.1"